# qtbriefcase

./: .gitignore  README.rst  pyproject.toml  requirements.txt
beeware-venv/: pyvenv.cfg
qtbriefcase/: LICENSE  pyproject.toml
qtbriefcase/src/qtbriefcase/: app.py
src/qtbriefcase/: __main__.py
src/qtbriefcase.dist-info/: METADATA
src/qtbriefcase/controller/: controller.py
src/qtbriefcase/model/: app_model.py
src/qtbriefcase/view/: app_view.py
